config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /cats-api
            backend:
              service:
                name: cats-api
                port:
                  number: 80

          - pathType: Prefix
            path: /norris-api
            backend:
              service:
                name: norris-api
                port:
                  number: 80

          - pathType: Prefix
            path: /spring-admin
            backend:
              service:
                name: spring-admin
                port:
                  number: 80
